# deep_routing_lab

./: .gitignore  LICENSE.txt  README.md  pyproject.toml  setup.cfg  simpleCNN1.ipynb  test_data_generator.ipynb  train_deep_router.py  validate_deep_router.py
config/: config.yaml  config_dem1.yaml  config_dev1.yaml
environment/: environment.yml  environment_cpu.yml  environment_cuda.yml  environment_mps.yml
notebooks/: generate_dem_and_rainfall.ipynb
readme/: drl.aux  drl.bbl  drl.blg  drl.out  drl.tex  references.bib
simple_cnn_example/: MONO_notebook_simpleCNN1.ipynb  README.md  cnn_model.py  config.py  data_generation.py  evaluate_model.py  simple_cnn.ipynb  train_model.py
src/: data_generator.py  test_data_generator.ipynb
src/drl/: __init__.py  cloud_mask.py  data_generator.py  data_generator_parll.py  deep_dataset.py  deep_router.py  dem_generator.py  overland_router.py  rain_generator.py  validation.py
src/drl/utils/: __init__.py  cloud_mask.py  config_loader.py  quality_control.py  tensor_ops.py  viz.py
tests/: test_data_generator.ipynb
