[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "deep-routing-lab"
version = "0.1.0"
description = "A DEM simulator and CNN-based terrain modeling toolkit"
readme = "README.md"
authors = [    
    {name = "Jonathan M. Frame", email = "jmframe@ua.edu"},
    {name = "Jackson Laney", email = "jrlaney1@crimson.ua.edu"}
    ]
requires-python = ">=3.8"
dependencies = []

[tool.setuptools.packages.find]
where = ["src"]
include = ["drl*"]