[metadata]
name = deep-routing-lab
version = 0.1.0
description = A DEM simulator and CNN-based terrain modeling toolkit
long_description = file: README.md
long_description_content_type = text/markdown
author = Jackson Laney, Jonathan M. Frame
license = MIT

[options]
packages = find:
package_dir =
    =src
python_requires = >=3.8
